--- a/QuickBuy.Angular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickBuy.Angular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,8 @@
 <header>
   <nav class='navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3'>
     <div class="container">
-      <a class="navbar-brand" [routerLink]='["/"]'>Grocery Shop</a>
+      <img src="/assets/sale-png-icon.png" alt="Grocery Shop" width="40">
+      <a class="navbar-brand" [routerLink]='["/"]'>&nbsp;Grocery Shop</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-label="Toggle navigation"
               [attr.aria-expanded]="isExpanded" (click)="toggle()">
         <span class="navbar-toggler-icon"></span>
@@ -20,8 +21,11 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/produto"]'>Produto</a>
           </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!usuarioAutenticado()">
             <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Entrar</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="usuarioAutenticado()">
+            <a class="nav-link text-dark" [routerLink]='[""]' (click)="sair()">Sair</a>
           </li>
         </ul>
       </div>
