--- a/QuickBuy.Angular/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickBuy.Angular/ClientApp/src/app/usuario/login/login.component.html
@@ -48,7 +48,10 @@
       </label>
     </div>
 
-    <button class="btn btn-lg btn-primary btn-block mb-2" type="submit" (click)="entrar()">Entrar</button>
+    <button class="btn btn-lg btn-primary btn-block mb-2" type="submit" (click)="entrar()" [disabled]="ativar_spinner">
+      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="ativar_spinner"></span>
+      Entrar
+    </button>
 
     <div class="alert alert-danger" *ngIf="mensagem">
       {{mensagem}}
