--- a/QuickBuy.Angular/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickBuy.Angular/ClientApp/src/app/usuario/login/login.component.html
@@ -3,6 +3,7 @@
     <img class="mb-4" src="/assets/grocery-shop-logo-300x275.png" alt="Grocery Shop" width="150">
     <h1 class="h3 mb-3 font-weight-normal login">Login do Cliente</h1>
 
+    <!--Email-->
     <label for="inputEmail" class="sr-only">Email</label>
     <input type="email" id="inputEmail" name="email"
            class="form-control mb-1"
@@ -13,17 +14,18 @@
            placeholder="Informe o seu email"
            [(ngModel)]="usuario.email"
            #email="ngModel"
-           email required autofocus />
+           email required />
 
     <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
       <div *ngIf="email.errors.required">
         Email é de preenchimento obrigatório
       </div>
       <div *ngIf="email.errors.email">
-        Email é de preenchimento obrigatório
+        Email não está no formato correto
       </div>
     </div>
 
+    <!--Senha-->
     <label for="inputSenha" class="sr-only">Senha</label>
     <input type="password" id="inputSenha" name="senha"
            class="form-control"
@@ -53,8 +55,12 @@
       Entrar
     </button>
 
-    <div class="alert alert-danger" *ngIf="mensagem">
+    <!--Mensagem validação-->
+    <div class="alert alert-danger mb-2" *ngIf="mensagem">
       {{mensagem}}
+    </div>
+    <div class="mb-2">
+      Novo por aqui? <a [routerLink]='["/novo-usuario"]'>Cadastre-se</a>
     </div>
   </form>
 </div>
