--- a/QuickBuy.Angular/ClientApp/src/app/produto/produto.component.html
+++ b/QuickBuy.Angular/ClientApp/src/app/produto/produto.component.html
@@ -65,10 +65,13 @@
 </div>
 
 <button class="btn btn-lg btn-primary btn-block mb-2 col-md-6"
-        type="submit" (click)="cadastrarUsuario()" [disabled]="ativar_spinner">
+        type="submit" (click)="cadastrar()" [disabled]="ativar_spinner">
   <span class="spinner-border spinner-border-sm"
         role="status" aria-hidden="true" *ngIf="ativar_spinner"></span>
   Salvar
 </button>
 
+<div class="alert alert-danger" *ngIf="mensagem">
+  {{mensagem}}
+</div>
 
