--- a/QuickBuy.Angular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickBuy.Angular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,9 +18,18 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!usuarioAutenticado()">
             <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Entrar</a>
           </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="usuarioAutenticado()">
-            <a class="nav-item nav-link text-dark" [routerLink]='[""]' (click)="sair()">Sair</a>
+          <!--Menu usuario logado no sistema-->
+          <li class="nav-item dropdown" *ngIf="usuarioAutenticado()">
+            <a class="nav-link text-dark dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false"
+               id="linkMenu" data-toggle="dropdown" href="#">{{usuario.email}}</a>
+
+            <ul class="dropdown-menu" aria-labelledby="linkMenu">
+              <li class="dropdown-item" role="menu" [routerLink]='[""]' (click)="sair()">Sair</li>
+            </ul>
           </li>
+          <!--<li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="usuarioAutenticado()">
+            <a class="nav-item nav-link text-dark" [routerLink]='[""]' (click)="sair()">Sair</a>
+          </li>-->
         </ul>
       </div>
     </div>
