--- a/QuickBuy.Angular/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
+++ b/QuickBuy.Angular/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
@@ -95,7 +95,7 @@
 
   <!--Mensagem cadastrado com sucesso-->
     <div class="alert alert-success" *ngIf="usuarioCadastrado">
-      Usuário cadasstrado com sucesso! <a class="alert-link" [routerLink]='["/entrar"]'>Clique aqui</a> para entrar com a sua conta no sistema.
+      Usuário cadastrado com sucesso! <a class="alert-link" [routerLink]='["/entrar"]'>Clique aqui</a> para entrar com a sua conta no sistema.
     </div>
   </form>
   
