--- a/QuickBuy.Angular/ClientApp/src/app/produto/pesquisa/pesquisa.produto.component.html
+++ b/QuickBuy.Angular/ClientApp/src/app/produto/pesquisa/pesquisa.produto.component.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<table class="table table-hover" *ngIf="produtos">
+<table class="table table-hover" *ngIf="produtos?.length>0">
   <thead>
     <tr>
       <th>Nome</th>
