carrinho de compras

--- a/GroceryShop.Angular/ClientApp/src/app/loja/produto/loja.produto.component.html
+++ b/GroceryShop.Angular/ClientApp/src/app/loja/produto/loja.produto.component.html
@@ -10,7 +10,7 @@
       <div class="row mb-4"> {{produto.descricao}}</div>
       <div class="row mb-4"> <h5> {{produto.preco | currency:'BRL':'symbol':'0.2-2':'pt'}}</h5></div>
       <div class="row mb-4">
-        <button class="btn btn-success btn-lg">Comprar</button>
+        <button class="btn btn-success btn-lg" (click)="comprar()">Comprar</button>
       </div>
     </div>
   </div>
