ajuste layout efetivar loja

--- a/GroceryShop.Angular/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
+++ b/GroceryShop.Angular/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
@@ -1,3 +1,51 @@
-<div *ngFor="let p of produtos">
-  {{p.nome}}
+<div class="container">
+  <div class="row">
+    <div class="col-md-9">
+      <h3>Carrinho de compras</h3>
+      <table class="table table-hover">
+
+        <tbody>
+          <tr *ngFor="let p of produtos">
+            <td style="width:20%">
+              <img *ngIf="p.nomeArquivo" src="../../../../../arquivos/{{p.nomeArquivo}}"
+                   title="{{p.nome}}" class="img-fluid">
+              <img *ngIf="!p.nomeArquivo" src="/assets/no-image.png" title="{{p.nome}}" class="img-fluid">
+            </td>
+            <td>
+              <div class="row mb-4">
+                <strong class="text-primary">{{p.nome}}</strong>
+              </div>
+              <div class="row">
+                <div class="col-md-1">Qtde: </div>
+                <div class="col-md-3">
+                  <input type="number" class="form-control" value="1" (change)="atualizarPreco(p, $event.target.value)" />
+                </div>
+                
+              </div>
+            </td>
+            <td class="text-right">
+              <strong class="text-danger">{{p.preco | currency:'BRL':'symbol':'0.2-2':'pt'}}</strong>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-3">
+      <div >
+        <div class="card">
+          <div class="card-header">Resumo</div>
+          <div class="card-body">
+            <table class="mb-4">
+              <tr>
+                <td><strong>Total dos items: </strong></td>
+                <td><strong class="text-danger">100000</strong></td>
+              </tr>
+            </table>
+            
+            <button class="btn btn-danger btn-block">Efetivar compra</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
