--- a/GroceryShop.Angular/ClientApp/src/app/loja/produto/loja.produto.component.html
+++ b/GroceryShop.Angular/ClientApp/src/app/loja/produto/loja.produto.component.html
@@ -10,7 +10,7 @@
       <div class="row mb-4"> {{produto.descricao}}</div>
       <div class="row mb-4"> <h5 class="text-danger"> {{produto.preco | currency:'BRL':'symbol':'0.2-2':'pt'}}</h5></div>
       <div class="row mb-4">
-        <button class="btn btn-warning btn-sm" (click)="comprar()">Adicionar ao carrinho</button>
+        <button class="btn btn-warning" (click)="comprar()">Adicionar ao carrinho</button>
       </div>
     </div>
   </div>
