--- a/GroceryShop.Angular/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
+++ b/GroceryShop.Angular/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-9">
-      <h3>Carrinho de compras</h3>
+      <h3 class="text-secondary">Carrinho de compras</h3>
       <table class="table table-hover">
 
         <tbody>
@@ -14,13 +14,18 @@
             <td>
               <div class="row mb-4">
                 <strong class="text-primary">{{p.nome}}</strong>
+                <small class="text-secondary">{{p.descricao | truncate: 165}}</small>
               </div>
               <div class="row">
-                <div class="col-md-1">Qtde: </div>
+                <div class="col-md-2"><small class="text-secondary">Qtde: </small></div>
                 <div class="col-md-3">
-                  <input type="number" class="form-control" value="1" (change)="atualizarPreco(p, $event.target.value)" />
+                  <input type="number" class="form-control" value="1" min="1"
+                         (change)="atualizarPreco(p, $event.target.value)"
+                         [(ngModel)]="p.quantidade" placeholder="1"/>
                 </div>
-                
+                <div class="col-md-3">
+                  <button class="btn btn-dark btn-sm" (click)="remover(p)">Remover</button>
+                </div>
               </div>
             </td>
             <td class="text-right">
@@ -38,7 +43,7 @@
             <table class="mb-4">
               <tr>
                 <td><strong>Total dos items: </strong></td>
-                <td><strong class="text-danger">100000</strong></td>
+                <td><strong class="text-danger">{{total | currency:'BRL':'symbol':'0.2-2':'pt'}}</strong></td>
               </tr>
             </table>
             
