--- a/GroceryShop.Angular/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
+++ b/GroceryShop.Angular/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
@@ -47,7 +47,7 @@
               </tr>
             </table>
             
-            <button class="btn btn-danger btn-block">Efetivar compra</button>
+            <button class="btn btn-danger btn-block" (click)="efetivarCompra()">Efetivar compra</button>
           </div>
         </div>
       </div>
